ops/k8s/apps/australia.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: australia
spec:
  selector:
    matchLabels:
      app: australia
  replicas: 2
  template:
    metadata:
      labels:
        app: australia
    spec:
      containers:
      - name: australia
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: australia
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: australia
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: australia
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatusau.org') {
        rewrite ^ https://coronastatusau.org$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatusau.org
    http:
      paths:
      - backend:
          serviceName: australia
          servicePort: 80
  - host: www.coronastatusau.org
    http:
      paths:
      - backend:
          serviceName: australia
          servicePort: 80
  tls:
  - hosts:
    - coronastatusau.org
    - www.coronastatusau.org
    secretName: au-coronastatus-cert-tls
