ops/k8s/apps/brazil.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brazil
spec:
  selector:
    matchLabels:
      app: brazil
  replicas: 2
  template:
    metadata:
      labels:
        app: brazil
    spec:
      containers:
      - name: brazil
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: brazil
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: brazil
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: brazil
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatus.net.br') {
        rewrite ^ https://coronastatus.net.br$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatus.net.br
    http:
      paths:
      - backend:
          serviceName: brazil
          servicePort: 80
  - host: www.coronastatus.net.br
    http:
      paths:
      - backend:
          serviceName: brazil
          servicePort: 80
  tls:
  - hosts:
    - coronastatus.net.br
    - www.coronastatus.net.br
    secretName: br-coronastatus-cert-tls
