ops/k8s/apps/colombia.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: colombia
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatus.co') {
        rewrite ^ https://coronastatus.co$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatus.co
    http:
      paths:
      - backend:
          serviceName: goodbye
          servicePort: 80
  - host: www.coronastatus.co
    http:
      paths:
      - backend:
          serviceName: goodbye
          servicePort: 80
  tls:
  - hosts:
    - coronastatus.co
    - www.coronastatus.co
    secretName: co-coronastatus-cert-tls
