ops/k8s/apps/czech.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: czech
spec:
  selector:
    matchLabels:
      app: czech
  replicas: 2
  template:
    metadata:
      labels:
        app: czech
    spec:
      containers:
      - name: czech
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: czech
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: czech
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: czech
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.corona-status.cz') {
        rewrite ^ https://corona-status.cz$request_uri permanent;
      }
spec:
  rules:
  - host: corona-status.cz
    http:
      paths:
      - backend:
          serviceName: czech
          servicePort: 80
  - host: www.corona-status.cz
    http:
      paths:
      - backend:
          serviceName: czech
          servicePort: 80
  tls:
  - hosts:
    - corona-status.cz
    - www.corona-status.cz
    secretName: cz-coronastatus-cert-tls
