ops/k8s/apps/india.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: india
spec:
  selector:
    matchLabels:
      app: india
  replicas: 2
  template:
    metadata:
      labels:
        app: india
    spec:
      containers:
      - name: india
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: india
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: india
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: india
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.corona-status.in') {
        rewrite ^ https://corona-status.in$request_uri permanent;
      }
spec:
  rules:
  - host: corona-status.in
    http:
      paths:
      - backend:
          serviceName: india
          servicePort: 80
  - host: www.corona-status.in
    http:
      paths:
      - backend:
          serviceName: india
          servicePort: 80
  tls:
  - hosts:
    - corona-status.in
    - www.corona-status.in
    secretName: in-coronastatus-cert-tls
