ops/k8s/apps/indonesia.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indonesia
spec:
  selector:
    matchLabels:
      app: indonesia
  replicas: 2
  template:
    metadata:
      labels:
        app: indonesia
    spec:
      containers:
      - name: indonesia
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: indonesia
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: indonesia
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: indonesia
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatus.id') {
        rewrite ^ https://coronastatus.id$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatus.id
    http:
      paths:
      - backend:
          serviceName: indonesia
          servicePort: 80
  - host: www.coronastatus.id
    http:
      paths:
      - backend:
          serviceName: indonesia
          servicePort: 80
  tls:
  - hosts:
    - coronastatus.id
    - www.coronastatus.id
    secretName: id-coronastatus-cert-tls
