ops/k8s/apps/italy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: italy
spec:
  selector:
    matchLabels:
      app: italy
  replicas: 2
  template:
    metadata:
      labels:
        app: italy
    spec:
      containers:
      - name: italy
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: italy
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: italy
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: italy
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatus.it') {
        rewrite ^ https://coronastatus.it$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatus.it
    http:
      paths:
      - backend:
          serviceName: italy
          servicePort: 80
  - host: www.coronastatus.it
    http:
      paths:
      - backend:
          serviceName: italy
          servicePort: 80
  tls:
  - hosts:
    - coronastatus.it
    - www.coronastatus.it
    secretName: it-coronastatus-cert-tls
