ops/k8s/apps/lithuania.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lithuania
spec:
  selector:
    matchLabels:
      app: lithuania
  replicas: 2
  template:
    metadata:
      labels:
        app: lithuania
    spec:
      containers:
      - name: lithuania
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: lithuania
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: lithuania
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lithuania
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatus.lt') {
        rewrite ^ https://coronastatus.lt$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatus.lt
    http:
      paths:
      - backend:
          serviceName: lithuania
          servicePort: 80
  - host: www.coronastatus.lt
    http:
      paths:
      - backend:
          serviceName: lithuania
          servicePort: 80
  tls:
  - hosts:
    - coronastatus.lt
    - www.coronastatus.lt
    secretName: lt-coronastatus-cert-tls
