ops/k8s/apps/malta.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: malta
spec:
  selector:
    matchLabels:
      app: malta
  replicas: 2
  template:
    metadata:
      labels:
        app: malta
    spec:
      containers:
      - name: malta
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: malta
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: malta
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: malta
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatusmt.com') {
        rewrite ^ https://coronastatusmt.com$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatusmt.com
    http:
      paths:
      - backend:
          serviceName: malta
          servicePort: 80
  - host: www.coronastatusmt.com
    http:
      paths:
      - backend:
          serviceName: malta
          servicePort: 80
  tls:
  - hosts:
    - coronastatusmt.com
    - www.coronastatusmt.com
    secretName: mt-coronastatus-cert-tls
