ops/k8s/apps/norway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: norway
spec:
  selector:
    matchLabels:
      app: norway
  replicas: 2
  template:
    metadata:
      labels:
        app: norway
    spec:
      containers:
      - name: norway
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: norway
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: norway
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: norway
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatus.no') {
        rewrite ^ https://coronastatus.no$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatus.no
    http:
      paths:
      - backend:
          serviceName: norway
          servicePort: 80
  - host: www.coronastatus.no
    http:
      paths:
      - backend:
          serviceName: norway
          servicePort: 80
  tls:
  - hosts:
    - coronastatus.no
    - www.coronastatus.no
    secretName: no-coronastatus-cert-tls
