ops/k8s/apps/romania.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romania
spec:
  selector:
    matchLabels:
      app: romania
  replicas: 2
  template:
    metadata:
      labels:
        app: romania
    spec:
      containers:
      - name: romania
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: romania
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: romania
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: romania
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatus.ro') {
        rewrite ^ https://coronastatus.ro$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatus.ro
    http:
      paths:
      - backend:
          serviceName: romania
          servicePort: 80
  - host: www.coronastatus.ro
    http:
      paths:
      - backend:
          serviceName: romania
          servicePort: 80
  tls:
  - hosts:
    - coronastatus.ro
    - www.coronastatus.ro
    secretName: ro-coronastatus-cert-tls
