ops/k8s/apps/spain.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spain
spec:
  selector:
    matchLabels:
      app: spain
  replicas: 2
  template:
    metadata:
      labels:
        app: spain
    spec:
      containers:
      - name: spain
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: spain
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: spain
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spain
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatus.es') {
        rewrite ^ https://coronastatus.es$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatus.es
    http:
      paths:
      - backend:
          serviceName: spain
          servicePort: 80
  - host: www.coronastatus.es
    http:
      paths:
      - backend:
          serviceName: spain
          servicePort: 80
  tls:
  - hosts:
    - coronastatus.es
    - www.coronastatus.es
    secretName: es-coronastatus-cert-tls
