ops/k8s/apps/turkey.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turkey
spec:
  selector:
    matchLabels:
      app: turkey
  replicas: 2
  template:
    metadata:
      labels:
        app: turkey
    spec:
      containers:
      - name: turkey
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: turkey
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: turkey
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: turkey
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatustr.com') {
        rewrite ^ https://coronastatustr.com$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatustr.com
    http:
      paths:
      - backend:
          serviceName: turkey
          servicePort: 80
  - host: www.coronastatustr.com
    http:
      paths:
      - backend:
          serviceName: turkey
          servicePort: 80
  tls:
  - hosts:
    - coronastatustr.com
    - www.coronastatustr.com
    secretName: tr-coronastatus-cert-tls
