ops/k8s/apps/usa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usa
spec:
  selector:
    matchLabels:
      app: usa
  replicas: 2
  template:
    metadata:
      labels:
        app: usa
    spec:
      containers:
      - name: usa
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: usa
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: usa
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: usa
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatus.us') {
        rewrite ^ https://coronastatus.us$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatus.us
    http:
      paths:
      - backend:
          serviceName: usa
          servicePort: 80
  - host: www.coronastatus.us
    http:
      paths:
      - backend:
          serviceName: usa
          servicePort: 80
  tls:
  - hosts:
    - coronastatus.us
    - www.coronastatus.us
    secretName: us-coronastatus-cert-tls
